{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 419,
  "lineage": "3dcf9b4d-691e-0544-289d-66145d9c0ddc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:294184346915:loadbalancer/app/alb-nginx/80b05c35e52ccbf8",
            "arn_suffix": "app/alb-nginx/80b05c35e52ccbf8",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-nginx-2018245495.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:294184346915:loadbalancer/app/alb-nginx/80b05c35e52ccbf8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-nginx",
            "security_groups": [
              "sg-02a03f161a3f65a07"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0261620096c99575e"
              },
              {
                "subnet_id": "subnet-07d7539e5400df248"
              }
            ],
            "subnets": [
              "subnet-0261620096c99575e",
              "subnet-07d7539e5400df248"
            ],
            "tags": {
              "Name": "alb-nginx"
            },
            "tags_all": {
              "Name": "alb-nginx"
            },
            "vpc_id": "vpc-09c0827340126e0e3",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.allow_http_s",
            "aws_subnet.stage_pub_subnet_a",
            "aws_subnet.stage_pub_subnet_b",
            "aws_vpc.stage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:294184346915:listener/app/alb-nginx/80b05c35e52ccbf8/63f597a24c21e761",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:294184346915:targetgroup/alb-nginx-tg/fdc7f10e8e687210",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:294184346915:listener/app/alb-nginx/80b05c35e52ccbf8/63f597a24c21e761",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:294184346915:loadbalancer/app/alb-nginx/80b05c35e52ccbf8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb_nginx",
            "aws_alb_target_group.alb_nginx_tg",
            "aws_security_group.allow_http_s",
            "aws_subnet.stage_pub_subnet_a",
            "aws_subnet.stage_pub_subnet_b",
            "aws_vpc.stage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_nginx_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:294184346915:targetgroup/alb-nginx-tg/fdc7f10e8e687210",
            "arn_suffix": "targetgroup/alb-nginx-tg/fdc7f10e8e687210",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 6,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:294184346915:targetgroup/alb-nginx-tg/fdc7f10e8e687210",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09c0827340126e0e3"
          },
          "dependencies": [
            "aws_vpc.stage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eIP_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ab9ba79bf06ae4ac",
            "domain": "vpc",
            "id": "eipalloc-0ab9ba79bf06ae4ac",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-69-111-26.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.69.111.26",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eIP_a"
            },
            "tags_all": {
              "Name": "eIP_a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eIP_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098768d1c58e74ef5",
            "domain": "vpc",
            "id": "eipalloc-098768d1c58e74ef5",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-126-125-228.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.126.125.228",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eIP_b"
            },
            "tags_all": {
              "Name": "eIP_b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "stage_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:294184346915:internet-gateway/igw-01e912034456c6662",
            "id": "igw-01e912034456c6662",
            "owner_id": "294184346915",
            "tags": {
              "Name": "stage-igw"
            },
            "tags_all": {
              "Name": "stage-igw"
            },
            "vpc_id": "vpc-09c0827340126e0e3"
          },
          "dependencies": [
            "aws_vpc.stage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ab9ba79bf06ae4ac",
            "connectivity_type": "public",
            "id": "nat-013f1df85e97f4757",
            "network_interface_id": "eni-0c41f14b34d313149",
            "private_ip": "10.0.10.91",
            "public_ip": "3.69.111.26",
            "subnet_id": "subnet-07d7539e5400df248",
            "tags": {
              "Name": "NATgw_a"
            },
            "tags_all": {
              "Name": "NATgw_a"
            }
          },
          "dependencies": [
            "aws_eip.nat_eIP_a",
            "aws_subnet.stage_pub_subnet_a",
            "aws_vpc.stage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098768d1c58e74ef5",
            "connectivity_type": "public",
            "id": "nat-0e3d34f05fbd82686",
            "network_interface_id": "eni-0d7d1bc89353bfcf4",
            "private_ip": "10.0.11.232",
            "public_ip": "3.126.125.228",
            "subnet_id": "subnet-0261620096c99575e",
            "tags": {
              "Name": "NATgw_b"
            },
            "tags_all": {
              "Name": "NATgw_b"
            }
          },
          "dependencies": [
            "aws_eip.nat_eIP_b",
            "aws_subnet.stage_pub_subnet_b",
            "aws_vpc.stage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Prv_RT_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:294184346915:route-table/rtb-0146339e0530b715e",
            "id": "rtb-0146339e0530b715e",
            "owner_id": "294184346915",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-013f1df85e97f4757",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prv-RT_a"
            },
            "tags_all": {
              "Name": "Prv-RT_a"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c0827340126e0e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eIP_a",
            "aws_nat_gateway.NATgw_a",
            "aws_subnet.stage_pub_subnet_a",
            "aws_vpc.stage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Prv_RT_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:294184346915:route-table/rtb-07f8401a8cc2f0ded",
            "id": "rtb-07f8401a8cc2f0ded",
            "owner_id": "294184346915",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e3d34f05fbd82686",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prv-RT_b"
            },
            "tags_all": {
              "Name": "Prv-RT_b"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c0827340126e0e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eIP_b",
            "aws_nat_gateway.NATgw_b",
            "aws_subnet.stage_pub_subnet_b",
            "aws_vpc.stage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Pub_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:294184346915:route-table/rtb-04317a067588eadfe",
            "id": "rtb-04317a067588eadfe",
            "owner_id": "294184346915",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01e912034456c6662",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Pub-RT"
            },
            "tags_all": {
              "Name": "Pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c0827340126e0e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.stage_igw",
            "aws_vpc.stage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Prv_RT_a_assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c727b5ff259c369",
            "route_table_id": "rtb-0146339e0530b715e",
            "subnet_id": "subnet-005353014752c38ee"
          },
          "dependencies": [
            "aws_eip.nat_eIP_a",
            "aws_nat_gateway.NATgw_a",
            "aws_route_table.Prv_RT_a",
            "aws_subnet.stage_prv_subnet_a",
            "aws_subnet.stage_pub_subnet_a",
            "aws_vpc.stage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Prv_RT_b_assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fe3e8ad264070db",
            "route_table_id": "rtb-07f8401a8cc2f0ded",
            "subnet_id": "subnet-00cb226a4178f4db3"
          },
          "dependencies": [
            "aws_eip.nat_eIP_b",
            "aws_nat_gateway.NATgw_b",
            "aws_route_table.Prv_RT_b",
            "aws_subnet.stage_prv_subnet_b",
            "aws_subnet.stage_pub_subnet_b",
            "aws_vpc.stage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Pub_RT_a_assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041fae8acf0510757",
            "route_table_id": "rtb-04317a067588eadfe",
            "subnet_id": "subnet-07d7539e5400df248"
          },
          "dependencies": [
            "aws_internet_gateway.stage_igw",
            "aws_route_table.Pub_RT",
            "aws_subnet.stage_pub_subnet_a",
            "aws_vpc.stage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Pub_RT_b_assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082ad4e4f55c83d04",
            "route_table_id": "rtb-04317a067588eadfe",
            "subnet_id": "subnet-0261620096c99575e"
          },
          "dependencies": [
            "aws_internet_gateway.stage_igw",
            "aws_route_table.Pub_RT",
            "aws_subnet.stage_pub_subnet_b",
            "aws_vpc.stage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:294184346915:security-group/sg-02a03f161a3f65a07",
            "description": "Allow http and https inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a03f161a3f65a07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_http_s",
            "name_prefix": "",
            "owner_id": "294184346915",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http_s"
            },
            "tags_all": {
              "Name": "allow_http_s"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c0827340126e0e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.stage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stage_prv_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:294184346915:subnet/subnet-005353014752c38ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005353014752c38ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294184346915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-prv-1a"
            },
            "tags_all": {
              "Name": "stage-prv-1a"
            },
            "vpc_id": "vpc-09c0827340126e0e3"
          },
          "dependencies": [
            "aws_vpc.stage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stage_prv_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:294184346915:subnet/subnet-00cb226a4178f4db3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cb226a4178f4db3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294184346915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-prv-1b"
            },
            "tags_all": {
              "Name": "stage-prv-1b"
            },
            "vpc_id": "vpc-09c0827340126e0e3"
          },
          "dependencies": [
            "aws_vpc.stage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stage_pub_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:294184346915:subnet/subnet-07d7539e5400df248",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d7539e5400df248",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294184346915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-pub-1a"
            },
            "tags_all": {
              "Name": "stage-pub-1a"
            },
            "vpc_id": "vpc-09c0827340126e0e3"
          },
          "dependencies": [
            "aws_vpc.stage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stage_pub_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:294184346915:subnet/subnet-0261620096c99575e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0261620096c99575e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294184346915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-pub-1b"
            },
            "tags_all": {
              "Name": "stage-pub-1b"
            },
            "vpc_id": "vpc-09c0827340126e0e3"
          },
          "dependencies": [
            "aws_vpc.stage_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "stage_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:294184346915:vpc/vpc-09c0827340126e0e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d24a45075525675d",
            "default_route_table_id": "rtb-0c85cb112e6f64f40",
            "default_security_group_id": "sg-04e1e1f7c5f92badc",
            "dhcp_options_id": "dopt-00b3f9a09b47c6144",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09c0827340126e0e3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c85cb112e6f64f40",
            "owner_id": "294184346915",
            "tags": {
              "Name": "stage-vpc"
            },
            "tags_all": {
              "Name": "stage-vpc"
            }
          }
        }
      ]
    }
  ]
}